# equity-research-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  nodes.py  state.py
app/core/: __init__.py  config.py  observability.py
app/llm/: __init__.py  client.py
app/rag/: __init__.py  embeddings.py  ingest.py  store.py
app/tools/: __init__.py  market_data.py  metrics.py  news.py  rag.py  rating.py  revisions.py
eval/: __init__.py  dataset.jsonl  run_eval.py
tests/: test_agent.py  test_api.py  test_eval.py  test_rag.py  test_rating.py  test_tools.py
